modules/k3s/manifests/key-sensei/06-client-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: key-sensei-client
  namespace: key-sensei
spec:
  replicas: 1
  selector:
    matchLabels:
      app: key-sensei-client
  template:
    metadata:
      labels:
        app: key-sensei-client
    spec:
      containers:
        - name: client
          image: devakay/key-sensei-client:latest
          ports:
            - containerPort: 80
          resources:
            requests:
              memory: "32Mi"
              cpu: "50m"
            limits:
              memory: "64Mi"
              cpu: "200m"
          livenessProbe:
            httpGet:
              path: /
              port: 80
            initialDelaySeconds: 10
            periodSeconds: 10
          readinessProbe:
            httpGet:
              path: /
              port: 80
            initialDelaySeconds: 5
            periodSeconds: 5
