modules/k3s/manifests/key-sensei/05-server-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: server
  namespace: key-sensei
spec:
  selector:
    app: key-sensei-server
  ports:
    - port: 8000
      targetPort: 8000
  type: ClusterIP
