modules/k3s/manifests/key-sensei/07-client-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: client
  namespace: key-sensei
spec:
  selector:
    app: key-sensei-client
  ports:
    - port: 80
      targetPort: 80
  type: ClusterIP
