modules/k3s/manifests/key-sensei/08-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: key-sensei-ingress
  namespace: key-sensei
  annotations:
    kubernetes.io/ingress.class: "traefik"
spec:
  rules:
    - host: key-sensei.tech1savvy.me
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: client
                port:
                  number: 80
